# visualizerWaybar

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/agents/: pedagogo-linux-oss.agent.md
config/: style-additions.css  waybar-module.jsonc
scripts/: install.sh  uninstall.sh
src/: main.rs
